tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_GetStaticParametersForMethod_Null.bsl

EVIL_PROVIDER_GetStaticParametersForMethod_Null.fsx(7,17,7,92): typecheck error FS3051: The type provider 'Provider.EvilProviderWhereGetStaticParametersForMethodReturnsNull' reported an error: The type provider returned 'null', which is not a valid return value from 'GetStaticParametersForMethod'
