tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_GetStaticParametersForMethod_Null.fsx
#r "provider_EVIL_PROVIDER_GetStaticParametersForMethod_Null.dll"


open FSharp.EvilProviderWhereGetStaticParametersForMethodReturnsNull

// It is enough to name the type to expose the validation check
let Negative1 = FSharp.EvilProviderWhereGetStaticParametersForMethodReturnsNull.TheType.Boo<3>()
